# FakeDataGenerator

./: README.md
SimpleDataGenerator/: customer.py  pyproject.toml
