[tool.poetry]
name = "simpledatagenerator"
version = "0.1.0"
description = "The directory for simple data generation"
authors = ["Kostek <ksytnik73kwer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Faker = "^25.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
